Styled scrollbar, fixed header bug on mobile and deleted article.css

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -41,6 +41,7 @@
   }
 
   &__menu {
+    z-index: 1;
     position: absolute;
     width: calc(100% - 3rem);
     left: 50%;
